<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_bg"
        android:text="0"
        android:padding="8dp"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="@id/result_id"
        app:layout_constraintStart_toStartOf="@id/result_id"
        app:layout_constraintTop_toBottomOf="@id/result_id">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear_everything_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_btn_bg"
                android:text="CE" />

            <Button
                android:id="@+id/clear_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_btn_bg"
                android:text="C" />

            <ImageButton
                android:id="@+id/backspace_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_btn_bg"
                android:src="@drawable/ic_baseline_backspace_24" />

            <Button
                android:id="@+id/divide_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_btn_bg"
                android:text="/" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nine_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="9" />

            <Button
                android:id="@+id/eight_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="8" />

            <Button
                android:id="@+id/seven_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="7"
                android:background="@drawable/round_btn_bg" />

            <Button
                android:id="@+id/multipy_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="X" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/six_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="6" />

            <Button
                android:id="@+id/five_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="5" />

            <Button
                android:id="@+id/four_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="4"
                android:background="@drawable/round_btn_bg" />

            <Button
                android:id="@+id/addition_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="+" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/three_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="3" />

            <Button
                android:id="@+id/two_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="2" />

            <Button
                android:id="@+id/one_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="1"
                android:background="@drawable/round_btn_bg" />

            <Button
                android:id="@+id/subtract_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="-" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/percent_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="%" />

            <Button
                android:id="@+id/zero_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="0" />

            <Button
                android:id="@+id/dot_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="."
                android:background="@drawable/round_btn_bg" />

            <Button
                android:id="@+id/equal_btn"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/round_btn_bg"
                android:text="=" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>